--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,20 +1,15 @@
 
-body {
+:root {
   margin: 0;
-  place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 200vh;
   margin-left: 2em;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
   line-height: 1.5;
-  font-weight: 400;
-  color-scheme: light dark;
+  font-weight: 900;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 .form{
@@ -28,11 +23,12 @@ h1 {
   text-align: center;
 }
 
-form{
+form {
   display: flex;
-  flex-direction: row;
+  flex-direction: column; /* Cambiado de row a column */
   justify-content: center;
   align-items: center;
+  gap: 1em; /* Espaciado entre los elementos */
 }
 
 .auxiliar{
@@ -83,7 +79,6 @@ a:hover {
 h4{
   text-align: center;
   margin-top: 1em;
-  margin-left: 6em;
 }
 
 .segopt{
@@ -112,4 +107,22 @@ button:hover {
   border-color: #646cff;
   background-color: #a9aeff;
   color: Black;
+}
+
+.error{
+  text-align: center;
+}
+
+.datepicker {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  color: rgba(255, 255, 255, 0.87);
+  transition: border-color 0.25s;
+  margin-right: 1em;
+  outline: none;
 }
