--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -254,3 +254,57 @@ nav a.active {
   margin-bottom: 10px;
 }
 
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-button {
+  background-color: #1a1a1a;
+  color: white;
+  padding: 0.6em 1.2em;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: white;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.pokemonapi {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.datos-pokemon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.input-pokemon {
+  display: flex;
+  width: 15em;
+}
