--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -393,3 +393,9 @@ nav a.active {
 .rbc-off-range-bg {
   background-color: #f5f5f5;
 }
+
+.datosUsuario {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
