--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -402,15 +402,23 @@ nav a.active {
 
 .private-page {
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .selectors {
   flex: 1;
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .event-card-container {
   flex: 1;
   padding: 20px;
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .droppable-card {
@@ -421,4 +429,55 @@ nav a.active {
 
 .droppable-card.over {
   border-color: green;
+}
+
+.progress-bar-container {
+  width: 100%;
+  max-width: 800px;
+  margin: 20px auto;
+  position: relative;
+}
+
+.progress-bar {
+  height: 10px;
+  background-color: #f0bb31;
+  border-radius: 5px;
+  transition: width 0.3s ease;
+  margin-bottom: 60px;
+}
+
+.progress-steps {
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  top: 15px;
+  width: 100%;
+}
+
+.progress-step {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.step-number {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #e0e0e0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  margin-bottom: 5px;
+}
+
+.progress-step.completed .step-number {
+  background-color: #f0bb31;
+}
+
+.step-label {
+  font-size: 12px;
+  color: #fff;
 }
