[SPAPOKEMON-0001] Cambio color fondo. (#1)
* Cambio color fondo.

* CAMBIO A azul.

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -9,7 +9,7 @@
   line-height: 1.5;
   font-weight: 900;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #6dabd7;
 }
 
 .form{
